LinkedList alternative and made GUI to show progress